2011-11-04  Olivier Goffart  <olivier@woboq.com>
	    Jason Merrill  <jason@redhat.com>

	PR c++/50965
	* class.c (check_field_decls): NSDMI makes a class non-aggregate.

2011-11-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/48420
	* call.c (conversion_null_warnings): For 'false' to NULL pointer,
	just check that TREE_TYPE (expr) is a BOOLEAN_TYPE.

2011-11-04  Ed Smith-Rowland  <3dw4rd@verizon.net>

	PR c++/50941
	* parser.c (cp_parser_userdef_string_literal): Fix string length.

2011-11-04  Jason Merrill  <jason@redhat.com>

	PR c++/48370
	* call.c (extend_ref_init_temps, extend_ref_init_temps_1): New.
	(set_up_extended_ref_temp): Use it.  Change cleanup parm to VEC.
	(initialize_reference): Just call convert_like.
	* decl.c (grok_reference_init): Just call initialize_reference.
	(build_init_list_var_init): Remove.
	(check_initializer): Change cleanup parm to VEC.  Handle references
	like other types.  Call perform_implicit_conversion instead
	of build_init_list_var_init.  Don't use build_aggr_init for
	aggregate initialization of arrays.
	(cp_finish_decl): Change cleanup to VEC.
	* typeck2.c (store_init_value): Call extend_ref_init_temps.
	Use build_vec_init for non-constant arrays.
	* init.c (expand_aggr_init_1): Adjust.
	(build_vec_init): Avoid re-converting an initializer
	that's already digested.
	* mangle.c (mangle_ref_init_variable): Add a discriminator.
	* cp-tree.h: Adjust.
	* typeck.c (convert_for_initialization): Adjust.
	* decl2.c (maybe_emit_vtables): Adjust.

2011-11-02  Jason Merrill  <jason@redhat.com>

	PR c++/50930
	* init.c (build_aggr_init): Don't set LOOKUP_ONLYCONVERTING
	if the initializer has TARGET_EXPR_DIRECT_INIT_P.
	(expand_default_init): An initializer with TARGET_EXPR_DIRECT_INIT_P
	or TARGET_EXPR_LIST_INIT_P doesn't need more processing.
	* tree.c (bot_manip): Propagate TARGET_EXPR_IMPLICIT_P,
	TARGET_EXPR_LIST_INIT_P, TARGET_EXPR_DIRECT_INIT_P.
	* call.c (convert_like_real): Set TARGET_EXPR_DIRECT_INIT_P